@@ -1,7 +1,7 @@
 #  File src/library/stats/R/r2dtable.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2013 The R Core Team
+#  Copyright (C) 1995-2020 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -18,13 +18,13 @@
 
 r2dtable <- function(n, r, c)
 {
-    if(length(n) == 0L || (n < 0) || is.na(n))
+    if(length(n <- as.integer(n)) == 0L || (n < 0) || is.na(n))
 	stop("invalid argument 'n'")
-    if((length(r) <= 1L) || any(r < 0) || anyNA(r))
+    if(length(r <- as.integer(r)) <= 1L || any(r < 0) || anyNA(r))
 	stop("invalid argument 'r'")
-    if((length(c) <= 1L) || any(c < 0) || anyNA(c))
+    if(length(c <- as.integer(c)) <= 1L || any(c < 0) || anyNA(c))
 	stop("invalid argument 'c'")
     if(sum(r) != sum(c))
 	stop("arguments 'r' and 'c' must have the same sums")
-    .Call(C_r2dtable, as.integer(n), as.integer(r), as.integer(c))
+    .Call(C_r2dtable, n, r, c) # ../src/r2dtable.c
 }
